# arbd2

./: .clang-format  .clangd  .clangd_workaround.h  .gitattributes  .gitignore  .gitmodules  Angle.h  BaseGrid.cu  BaseGrid.h  BrownianParticle.h  BrownianParticleType.cpp  BrownianParticleType.h  CMakeLists.txt  CMakePresets.json  CellDecomposition.cu  ComputeForce.cu  ComputeForce.cuh  ComputeForce.h  ComputeGridGrid.cu  ComputeGridGrid.cuh  Configuration.cpp  Configuration.h  CudaUtil.cu  CudaUtil.cuh  DcdWriter.h  Debug.h  Doxyfile  Exclude.h  FlowForce.h  GPUManager.cpp  GPUManager.h  GrandBrownTown.cu  GrandBrownTown.cuh  GrandBrownTown.h  JamesBond.cu  LICENSE  OverlordGrid.h  README  README.md  Random.h  (+53 more)
src/: .RigidBodyController.cu.rigid.swp  ARBDException.cpp  ARBDException.h  ARBDHeaders.h  ARBDLogger.h  ARBDLogger2.h  Angle.cu  Angle.h  BaseGrid.cu  BaseGrid.h  BrownParticlesKernel.h  BrownianParticle.cu  BrownianParticleType.cpp  BrownianParticleType.h  CMakeCache.txt  CMakeLists.txt  CUDA.h  CellDecomposition.cu  CellDecomposition.h  Common.h  ComputeForce.cu  ComputeForce.cuh  ComputeForce.h  ComputeGridGrid.cu  ComputeGridGrid.cuh  ComputeJustForce.h  Configuration.cpp  Configuration.h  CudaUtil.cu  CudaUtil.cuh  DcdWriter.h  Debug.h  Dihedral.cu  Dihedral.h  Exclude.cu  FlowForce.cpp  FlowForce.h  GPUController.h  GPUManager.cpp  GPUManager.h  (+80 more)
src/Backend/: Adapter.h  Buffer.h  Events.h  Header.h  Kernels.h  Kernels.h.bak  MPIBackend.h  Profiler.h  Proxy.cpp  Proxy.cu  Proxy.h  Proxy.h.bak  Proxy.mm  Proxy_sycl.cpp  Readme.md  Resource.h  UnifiedBuffer.h
src/Backend/CUDA/: .Kernel.cu.bak  CUDAManager.cpp  CUDAManager.h  CUDAProfiler.cpp  CUDAProfiler.h  GPUManager_old.cpp  KernelHelper.cu  KernelHelper.cuh  NCCLManager.cpp  NCCLManager.h  Proxy.cu
src/Backend/GPU/: CudaManager.cpp  CudaManager.h  CudaMemory.h  GPUManager.cpp  GPUManager.h  GPUManager_old.cpp  GpuManager.new.h
src/Backend/METAL/: Kernels.mm  METALManager.cpp  METALManager.h  METALManager.h.bak  METALManager.mm  METALManager.mm.bak  Metal4.cpp  Metal4.h  Metal4.mm  example_metal_usage.mm
src/Backend/SYCL/: .Kernels.cpp  Kernels.cpp  Proxy_sycl.cpp  SYCLManager.cpp  SYCLManager.h
src/Backend/old_proxy/: Proxy_metal.cpp  Proxy_sycl.cpp  Proxy_v0.h  Proxy_v1.h  q.cpp
src/Backend/proxy.bak/: Proxy.h  Proxy.h.bak  Proxy.mm
src/Compute/Integrator/: GPUIntegrator.cu  Integrator.h
src/Compute/SYCL/: Patch_SYCL.cpp
src/Core/: Common.h  CudaMemory.h  Types.h  Useful.cu
src/Core/Backend/: Resource.h
src/Core/Types/: Bitmask.h
src/IO/: Configuration.cpp  Configuration.h  DcdWriter.h  FileHandle.h  Reader.h  TrajectoryWriter.h
src/Integrator/: CPU.h  kernels.h
src/Interaction/: CPU.cpp  CPU.h  CUDA.cu  CUDA.h  kernels.h
src/Interactions/: GPUInteraction.h  Interaction.h  kernels.h
src/Math/: Array.h  BaseGrid.h  Bitmask.h  Matrix3.h  TypeName.h  Types.h  Vector3.h
src/Math/BaseGrid/: BaseGrid.cu  SYCLkernels.h
src/Math/CPU/: BaseGrid.cpp
src/Math/CUDA/: BaseGrid.cu
src/Objects/: ForceEnergy.h  IndexList.h
src/Objects/Grids/: DecompossGrid.h
src/Objects/Particles/: BrownianParticleType.h  ParticlePatch.cpp  ParticlePatch.h  Reservoir.h
src/Objects/Patch/: ParticlePatch.cpp  ParticlePatch.h  Patch.cpp  Patch.h
src/Objects/RigidBody/: RigidBodyType.h
src/ParticlePatch/: CPU.h  CUDA.cu  CUDA.h
src/Patch/: CPU.h  ParticlePatch.cpp  ParticlePatch.h  PatchOp.h  kernels.h
src/Patch/CPU/: CPU.h
src/Patch/GPU/: CUDA.h
src/Python/: pypatch.cpp  pytypes.cpp
src/Random/: Random.cpp  Random.cu  Random.h  Random.h.bak  Random.metal  Random.mm  RandomKernels.h  Random_SYCL.cpp  Random_old.h
src/Simulation/: IndexList.h  SimManager.cu  SimManager.h  SimSystem.h
src/Simulation/Integrator/: GPUIntegrator.h  Integrator.cpp
src/Simulation/Interactions/: CPUInteraction.h  Interaction.cpp  Interaction.h  kernels.h
src/System/: Decompose.cpp  IndexList.h  Readme.md  SimManager.h  SimSystem.cpp  SimSystem.h
src/System/CUDA/: SimManager.cu  SimManager.cu.bak
src/Tests/: CMakeLists.txt  array.cu  bitmask.cu  bitmask_metal.mm  catch_boiler.h  matrix3.cu  metal_backend.mm  metal_bitmask.mm  metal_events.mm  metal_usage.mm  mpitest.cpp  proxytest.cpp  proxytest.cu  sycl_backend.cpp  sycl_bitmask.cpp  sycl_kernels.cpp  test.cpp  test_metal.mm  test_metal_backend.mm  test_metal_events.mm  test_metal_kernels.metal  test_sycl.cpp  test_sycl_backend.cpp  test_sycl_nocatch.cpp  test_sycl_omp.cpp  type_name.h  unifiedbuffer_metal.mm  unifiedbuffer_sycl.cpp  vector3_precision.cu
src/Tests/Backends/: Basegrid.cpp  README_Metal_Tests.md  cuda_backend.cpp  cuda_manager.cu  generic_Buffer.cpp  metal_backend.cpp  metal_backend.mm  metal_events.cpp  metal_manager.cpp  metal_test.cpp  sycl_backend.cpp  sycl_manager.cpp
src/Tests/Kernels/: cuda_kernels.cpp  metal_events.cpp  metal_events.mm  metal_kernels.cpp  metal_kernels.metal  metal_test.mm  metal_unifiedbuffer.cpp  sycl_kernels.cpp  sycl_unifiedbuffer.cpp  unifiedbuffer_metal.mm
src/Tests/Lecacy_Buffers/: cuda_unifiedbuffer.cu
src/Tests/Math/: Kernel_for_test.h  RandomDevice.cpp  RandomProfile.cpp  RandomTest.cu  RandomTestKernels.cu  array.cu  bitmask.cu  cuda_random.cu  matrix3.cu  metal_bitmask.cpp  metal_bitmask.mm  sycl_random.cpp  vector3_precision.cu
src/Types/: Array.h  Bitmask.h  Matrix3.h  TypeName.h  Types.h  UnifiedArray.h  Vector3.h
src/core/Types/: Array.h
src/dpct_output/: MainSourceFiles.yaml  Useful.dp.cpp  Useful.h.yaml
src/pybindings/: CMakeLists.txt  pyarbd.cpp  pypatch.cpp  pytypes.cpp
src/python/: CMakeLists.txt
test_unit/: CMakeLists.txt  catch_boiler.h  nvidia-smi-state.txt
test_unit/Backends/: cuda_backend.cpp  metal_backend.cpp  metal_buffer_test.cpp  metal_events.cpp  mpitest.cpp
test_unit/Kernels/: cuda_kernels.cpp  metal_kernels.cpp  metal_kernels.metal  sycl_kernels.cpp
test_unit/Lecacy_Buffers/: cuda_backend.cu  metal_unifiedbuffer.cpp  sycl_unifiedbuffer.cpp
test_unit/Math/: Basegrid.cpp  RandomDevice.cpp  RandomProfile.cpp
test_unit/sycl_test/: test_device_creation.cpp
(+3739 files in other folders)
